crates/fortitude_linter/src/rules/modernisation/snapshots/fortitude_linter__rules__modernisation__tests__double-precision_MOD001.f90.snap
---
source: crates/fortitude_linter/src/rules/modernisation/mod.rs
expression: diagnostics
---
./resources/test/fixtures/modernisation/MOD001.f90:1:1: MOD001 Use of 'double precision' is discouraged
  |
1 | double precision function double(x)
  | ---------------- MOD001
2 |   double precision, intent(in) :: x
3 |   double = 2 * x
  |
  = help: Prefer 'real(real64)' (see 'iso_fortran_env')

./resources/test/fixtures/modernisation/MOD001.f90:2:3: MOD001 Use of 'double precision' is discouraged
  |
1 | double precision function double(x)
2 |   double precision, intent(in) :: x
  |   ---------------- MOD001
3 |   double = 2 * x
4 | end function double
  |
  = help: Prefer 'real(real64)' (see 'iso_fortran_env')

./resources/test/fixtures/modernisation/MOD001.f90:7:3: MOD001 Use of 'double precision' is discouraged
  |
6 | subroutine triple(x)
7 |   double precision, intent(inout) :: x
  |   ---------------- MOD001
8 |   x = 3 * x
9 | end subroutine triple
  |
  = help: Prefer 'real(real64)' (see 'iso_fortran_env')

./resources/test/fixtures/modernisation/MOD001.f90:12:3: MOD001 Use of 'double precision' is discouraged
   |
11 | function complex_mul(x, y)
12 |   double precision, intent(in) :: x
   |   ---------------- MOD001
13 |   double complex, intent(in) :: y
14 |   double complex :: complex_mul
   |
   = help: Prefer 'real(real64)' (see 'iso_fortran_env')

./resources/test/fixtures/modernisation/MOD001.f90:13:3: MOD001 Use of 'double complex' is discouraged
   |
11 | function complex_mul(x, y)
12 |   double precision, intent(in) :: x
13 |   double complex, intent(in) :: y
   |   -------------- MOD001
14 |   double complex :: complex_mul
15 |   complex_mul = x * y
   |
   = help: Prefer 'complex(real64)' (see 'iso_fortran_env')

./resources/test/fixtures/modernisation/MOD001.f90:14:3: MOD001 Use of 'double complex' is discouraged
   |
12 |   double precision, intent(in) :: x
13 |   double complex, intent(in) :: y
14 |   double complex :: complex_mul
   |   -------------- MOD001
15 |   complex_mul = x * y
16 | end function complex_mul
   |
   = help: Prefer 'complex(real64)' (see 'iso_fortran_env')
