crates/fortitude_linter/src/rules/modernisation/snapshots/fortitude_linter__rules__modernisation__tests__include-statement_MOD031.f90.snap
---
source: crates/fortitude_linter/src/rules/modernisation/mod.rs
expression: diagnostics
---
./resources/test/fixtures/modernisation/MOD031.f90:3:1: MOD031 Include statement is deprecated, use modules instead
  |
1 | module test
2 |
3 | include "common_variables"
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^ MOD031
4 |
5 | contains
  |

./resources/test/fixtures/modernisation/MOD031.f90:8:5: MOD031 Include statement is deprecated, use modules instead
   |
 7 | integer function func1()
 8 |     include "variable_declaration"
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ MOD031
 9 |
10 |     func1 = i + 3
   |
