crates/fortitude_linter/src/rules/modernisation/snapshots/fortitude_linter__rules__modernisation__tests__old-mpi-module_MOD041.f90.snap
---
source: crates/fortitude_linter/src/rules/modernisation/mod.rs
expression: diagnostics
---
./resources/test/fixtures/modernisation/MOD041.f90:7:5: MOD041 Use of mpi module discouraged, use mpi_f08 instead
  |
6 |     ! Not technically deprecated, but discouraged
7 |     use mpi
  |     ^^^^^^^ MOD041
8 |
9 |     ! This is fine
  |
