crates/fortitude_linter/src/rules/modernisation/snapshots/fortitude_linter__rules__modernisation__tests__old-mpi-module_MOD201.f90.snap
---
source: crates/fortitude_linter/src/rules/modernisation/mod.rs
expression: diagnostics
snapshot_kind: text
---
MOD201 Use of mpi module discouraged, use mpi_f08 instead
 --> ./resources/test/fixtures/modernisation/MOD201.f90:7:5
  |
6 |     ! Not technically deprecated, but discouraged
7 |     use mpi
  |     ^^^^^^^
8 |
9 |     ! This is fine
  |
