crates/fortitude_linter/src/rules/modernisation/snapshots/fortitude_linter__rules__modernisation__tests__superfluous-save_MOD051.f90.snap
---
source: crates/fortitude_linter/src/rules/modernisation/mod.rs
expression: diagnostics
snapshot_kind: text
---
./resources/test/fixtures/modernisation/MOD051.f90:2:3: MOD051 [*] save statement is superfluous at the module level
  |
1 | module test
2 |   save
  |   ^^^^ MOD051
3 |
4 |   integer :: a
  |
  = help: Remove `save`

1 | module test
  -   save
2 |
3 |   integer :: a
4 |

./resources/test/fixtures/modernisation/MOD051.f90:13:12: MOD051 [*] save attribute is superfluous at the module level
   |
12 | module test
13 |   integer, save :: a
   |            ^^^^ MOD051
14 | end module test
   |
   = help: Remove `save`

10 | end module test
11 |
12 | module test
   -   integer, save :: a
13 +   integer :: a
14 | end module test
